--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "8d120385-201d-43c1-a82b-e15c39505f50"
 authors = ["JingYu Ning <foldfelis@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
 [compat]
 julia = "1.5"
 
