--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
         arch:
           - x64
     steps:
+      - name: Install GnuPlot
+        run: sudo apt-get install gnuplot
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
